--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "dompurify": "^2.2.7",
     "node-sass": "^5.0.0",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
